fix docs on mobile

--- a/platform/docs/src/css/custom.css
+++ b/platform/docs/src/css/custom.css
@@ -233,11 +233,6 @@ input[type='number'] {
   -moz-appearance: textfield; /* For Firefox */
 }
 
-.navbar__item {
-  display: flex;
-  align-items: center;
-}
-
 .navbar__item svg {
   margin-right: 5px;
   display: inline-block;
